--- a/style.css
+++ b/style.css
@@ -130,12 +130,18 @@ input:focus::placeholder {
     }
 
     .section1 {
-        margin: 0 10em;
+        margin: 0 auto;
         width: 100%;
         height: 50%;
+        justify-items: center;
+        text-align: center;
     }
 
     .section1 h1,p {
         max-width: 70%;
+    }
+
+    .section2 {
+        width: 100%;
     }
 }
